# serializer version: 1
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_cook_timer_complete-cook_timer_complete][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger Cook Timer Complete",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:timer',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_cook_timer_complete',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_cook_timer_complete-cook_timer_complete][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger Cook Timer Complete",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:timer',
      'integration': 'traeger',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_cook_timer_complete',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_cook_timer_complete-cook_timer_complete][03-triggered]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger Cook Timer Complete",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:timer',
      'integration': 'traeger',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_cook_timer_complete',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_cook_timer_complete-cook_timer_complete][04-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger Cook Timer Complete",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:timer',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_cook_timer_complete',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_probe_alarm_fired-probe_alarm_fired][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger Probe Alarm Fired",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_probe_alarm_fired',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_probe_alarm_fired-probe_alarm_fired][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger Probe Alarm Fired",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer',
      'integration': 'traeger',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_probe_alarm_fired',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_probe_alarm_fired-probe_alarm_fired][03-triggered]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger Probe Alarm Fired",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer',
      'integration': 'traeger',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_probe_alarm_fired',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_probe_alarm_fired-probe_alarm_fired][04-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger Probe Alarm Fired",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_probe_alarm_fired',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_system_timer_complete-sys_timer_complete][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger System Timer Complete",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:timer',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_system_timer_complete',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_system_timer_complete-sys_timer_complete][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger System Timer Complete",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:timer',
      'integration': 'traeger',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_system_timer_complete',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_system_timer_complete-sys_timer_complete][03-triggered]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': '',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger System Timer Complete",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:timer',
      'integration': 'traeger',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_system_timer_complete',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_binary_sensor_par[binary_sensor-traeger_0123456789ab_system_timer_complete-sys_timer_complete][04-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: "Johny's Traeger System Timer Complete",
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:timer',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.traeger_0123456789ab_system_timer_complete',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensor_platform
  list([
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_0123456789ab_cook_timer_complete',
      'original_name': '0123456789ab Cook Timer Complete',
      'translation_key': None,
      'unique_id': '0123456789ab_cook_timer_complete',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_0123456789ab_probe_alarm_fired',
      'original_name': '0123456789ab Probe Alarm Fired',
      'translation_key': None,
      'unique_id': '0123456789ab_probe_alarm_fired',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_0123456789ab_system_timer_complete',
      'original_name': '0123456789ab System Timer Complete',
      'translation_key': None,
      'unique_id': '0123456789ab_sys_timer_complete',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_cd0123456789_cook_timer_complete',
      'original_name': 'cd0123456789 Cook Timer Complete',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_timer_complete',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_cd0123456789_probe_alarm_fired',
      'original_name': 'cd0123456789 Probe Alarm Fired',
      'translation_key': None,
      'unique_id': 'cd0123456789_probe_alarm_fired',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_cd0123456789_system_timer_complete',
      'original_name': 'cd0123456789 System Timer Complete',
      'translation_key': None,
      'unique_id': 'cd0123456789_sys_timer_complete',
    }),
  ])
# ---
# name: test_binarysensor_platform_asyncadd
  list([
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.0123456789ab_probe_alarm_12charid1',
      'original_name': "Johny's Traeger Probe Alarm",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_alarm_12charId1',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.0123456789ab_probe_alarm_12charid2',
      'original_name': "Johny's Traeger Probe Alarm",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_alarm_12charId2',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.0123456789ab_probe_alarm_p0',
      'original_name': "Johny's Traeger Probe Alarm",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_alarm_p0',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.0123456789ab_probe_alarm_probe0',
      'original_name': "Johny's Traeger Probe Alarm",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_alarm_probe0',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.0123456789ab_probe_alarm_probe1',
      'original_name': "Johny's Traeger Probe Alarm",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_alarm_probe1',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_0123456789ab_cook_timer_complete',
      'original_name': "Johny's Traeger Cook Timer Complete",
      'translation_key': None,
      'unique_id': '0123456789ab_cook_timer_complete',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_0123456789ab_probe_alarm_fired',
      'original_name': "Johny's Traeger Probe Alarm Fired",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_alarm_fired',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_0123456789ab_system_timer_complete',
      'original_name': "Johny's Traeger System Timer Complete",
      'translation_key': None,
      'unique_id': '0123456789ab_sys_timer_complete',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_cd0123456789_cook_timer_complete',
      'original_name': 'cd0123456789 Cook Timer Complete',
      'translation_key': None,
      'unique_id': 'cd0123456789_cook_timer_complete',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_cd0123456789_probe_alarm_fired',
      'original_name': 'cd0123456789 Probe Alarm Fired',
      'translation_key': None,
      'unique_id': 'cd0123456789_probe_alarm_fired',
    }),
    dict({
      'device_class': None,
      'entity_id': 'binary_sensor.traeger_cd0123456789_system_timer_complete',
      'original_name': 'cd0123456789 System Timer Complete',
      'translation_key': None,
      'unique_id': 'cd0123456789_sys_timer_complete',
    }),
  ])
# ---
